Fixed the problem of the align the padding and the margin of the titles of the sections, Finished the testimony section

--- a/css/services.css
+++ b/css/services.css
@@ -1,9 +1,6 @@
 .services__content {
-  display: flex;
-  /* width: 100%; */
   background-color: var(--secundary-color);
   min-width: 32rem;
-  /* padding-top: 20rem; */
 }
 
 .services {
@@ -16,7 +13,6 @@
   max-width: 1440px;
 }
 .services__title-text {
-  /* max-width: ; */
 }
 .services__title {
   margin: 0;
